# thistle_tea

./: .credo.exs  .dockerignore  .formatter.exs  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  deploy.sh  deps.nix  devenv.nix  devenv.yaml  flake.nix  fly.toml  mangos0.sqlite  mix.exs  run.sh  vanilla_dbcs.sqlite
.github/workflows/: build.yml  ci.yml  deps-nix.yml
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css
assets/js/: app.js  coordinate_mapper.js  hooks.js  map.js
c_src/: namigator_ex.cpp
config/: config.exs  dev.exs  prod.exs  runtime.exs
docs/: architecture-overview.md
lib/: application.ex  auth.ex  authproxy.ex  dev_seed.ex  echo.ex  game.ex  gameproxy.ex  messenger.ex  namigator.ex  opcodes.ex  pathfinding.ex  sessionstorage.ex  spatial_hash.ex  telemetry.ex  thistle_tea.ex  util.ex
lib/auth/: account.ex  auth_server.ex  example.ex  srp.ex
lib/behavior/: follow_path.ex  wander.ex
lib/dbc/: spell.ex  spell_cast_times.ex
lib/dev_seed/: action_bars.ex
lib/game/: aura.ex  auth.ex  character.ex  chat.ex  combat.ex  connection.ex  entity.ex  field_struct.ex  game_object.ex  guid.ex  (+20 more)
native/namigator/: Cargo.toml  README.md
native/namigator/src/: lib.rs
native/thistletea_namigator/: Cargo.toml  README.md
native/thistletea_namigator/src/: lib.rs
scripts/: Dockerfile.wow-tools  deploy.sh  generate-dbc-db.sh  generate-mangos0-db.sh  install-databases.exp  run.sh  thistle_tea.container
test/: test_helper.exs  thistle_tea_test.exs  update_object_test.exs
(+1032 files in other folders)
